# atlascore

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  atlascore.code-workspace  final_vision.md  sysarchitecture.md
.github/prompts/: gemini.prompt.md
.github/workflows/: ci.yml  coverage_pages.yml
docs/: ascii.md  contributing.md  core.md  coverage.md  debugging_workflow.md  ecs.md  implementation_backlog.md  jobs.md  physics.md  simlab.md  text_renderer.md
docs/media/: README.md
include/ascii/: Renderer.hpp  TextRenderer.hpp
include/core/: Clock.hpp  FixedTimestepLoop.hpp  Logger.hpp
include/ecs/: ComponentStorage.hpp  World.hpp
include/jobs/: JobSystem.hpp
include/physics/: CollisionSystem.hpp  Components.hpp  EcsSystems.hpp  Systems.hpp
include/simlab/: HeadlessMetrics.hpp  Scenario.hpp  WorldHasher.hpp
scripts/: build_ci.sh
src/: main.cpp
src/ascii/: Renderer.cpp  TextRenderer.cpp
src/core/: Clock.cpp  FixedTimestepLoop.cpp  Logger.cpp
src/ecs/: World.cpp
src/jobs/: JobSystem.cpp
src/physics/: CollisionSystem.cpp  PhysicsIntegrationSystem.cpp  PhysicsPipelineSystem.cpp  Systems.cpp
src/simlab/: BallShowcaseScenario.cpp  ClothScenario.cpp  DeterminismHashScenario.cpp  DeterminismSmokeTest.cpp  FullDemoScenario.cpp  HeadlessMetrics.cpp  ParticleFluidScenario.cpp  PendulumScenario.cpp  PlanetaryGravityScenario.cpp  ScenarioRegistry.cpp  StackingScenario.cpp  StressTestScenario.cpp  TestFailureScenarios.cpp  TextRendererPatternsScenario.cpp  WorldHasher.cpp  WreckingBallScenario.cpp
tests/: collision_tests.cpp  coverage_tests.cpp  determinism_collision_tests.cpp  determinism_tests.cpp  ecs_collision_tests.cpp  ecs_extra_tests.cpp  ecs_physics_tests.cpp  headless_metrics_app_tests.cpp  headless_metrics_tests.cpp  jobs_wait_tests.cpp  physics_ball_tests.cpp  physics_circle_broadphase_tests.cpp  physics_stability_tests.cpp  scenario_registry_tests.cpp  scenario_update_contract_tests.cpp  selftests.cpp  simlab_determinism_tests.cpp  simlab_scenarios_tests.cpp  text_renderer_extra_tests.cpp  text_renderer_tests.cpp
